corrected some alignment of boxes

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -135,6 +135,9 @@ color: #FFFFCC;
 margin-top: 45px;
  
 }
+.two{
+  margin-top: 5px;
+}
 .three{
 
  // font-family: 'Belleza', sans-serif;
